tests/deploy_errors/flow_bad_arg/error.txt
Error: 
    8 | deploy test;
      | ^^^^^^^^^^^ Argument `snot` is required, but no defaults are provided in the definition and no final values in the instance

